Resolve different behavior of Qt5 vs Qt6 with QVariant

BUG: 499255
FIXED-IN: 5.2